Code review issues removed. Search button interface operating implemented.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Notebook</string>
+    <string name="no_notes_found_message">No notes found</string>
 </resources>
