--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Notebook</string>
     <string name="no_notes_found_message">No notes found</string>
     <string name="empty_notes_list_message">Add a note by clicking + button</string>
+    <string name="note_exists_message">Not with such title exists</string>
 </resources>
