--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="no_notes_found_message">No notes found</string>
     <string name="empty_notes_list_message">Add a note by clicking + button</string>
     <string name="note_exists_message">Note with such title exists</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
